# libefp

./: .gitignore  BSDmakefile  CMakeLists.txt  CONTRIBUTORS  Doxyfile  GNUmakefile.am  LICENSE  Makefile  Makefile.am  NEWS  README  README-cmake.md  README.md  VERSION  common.h  config.inc  configure.ac  energy.c  libefpConfig.cmake.in  libefphelp  main.c  mc_orig.c
cmake/: FindTargetLAPACK.cmake  Psi4Macros.cmake  libefpConfig.cmake.in
common/: BSDmakefile  Makefile  clapack.c  compat.c  compat.h  math_util.h  phys_const.h  util.c  util.h
config/: devel.inc  gcc-atlas-openmpi.inc  gcc-atlas.inc  gcc-netlib-openmpi.inc  gcc-netlib.inc  intel-openmpi.inc  intel.inc
doc/: interface.txt
efpmd/: .gitignore  BSDmakefile  README.md  cg.c  common.c  common.h  config.h  grad.c  hess.c  main.c  md.c  md.h  nve.c  nvt.c  opt.c  opt.h  parse.c  parse.h  sim.h  sp.c
efpmd/cubegen/: BSDmakefile  cubegen.c
efpmd/examples/: c6h6-dimer_opt.in  h2o-64_md.in  h2o-ch3oh_grad.in  h2o-ch3oh_hess.in  h2o-dimer_opt.in  h2o-min_hess.in  h2o-nh3_grad.in  h2o-tetramer_opt.in  water-cube-125_grad.in  water-cube-125_sp.in  water-cube-3375_sp.in
efpmd/libff/: Makefile  ff.c  ff.h
efpmd/libopt/: Makefile  opt.c  opt.h
efpmd/optimizer/: BSDmakefile  Makefile  opt.c  opt.h  optimizer.c  optimizer.h  test.c
efpmd/scripts/: cubegen.pl
efpmd/src/: BSDmakefile  Makefile  cfg.c  cfg.h  clapack.h  common.c  common.h  efield.c  energy.c  grad.c  gtest.c  hess.c  keywords.h  main.c  mc.c  mc.h  mc_direct.c  md.c  msg.c  msg.h  opt.c  optimizer.c  optimizer.h  pairwise.c  parse.c  phys.h  psp.c  rand.c  rand.h  sp.c
efpmd/tests/: c6h6-dimer_cg.in  h2o-dimer_cg.in  h2o-tetramer_cg.in  h2o_sp.in  water-cube-125_sp.in  water-cube-3375_sp.in
efpmd/tools/rdf/: BSDmakefile  rdf.c
fraglib/: amber99.ff  c6h6.efp  makefp.inp  oxalicb.efp  pentacene.efp  tetracene.efp  water.efp  xxii_exp_n2_1.efp  xxii_exp_n2_2.efp
fraglib/databases/: 2aminopyridine.efp  README.md  acetamide-hb.efp  aceticacid-gp.efp  adenine-wc.efp  ammonia.efp  ethene.efp  ethyne.efp  formicacid.efp  methane.efp  phenol.efp  pyrazine.efp  pyridine.efp  pyridone.efp  uracil.efp
fraglib/flex_efp_protein/: README.md
iface/: efp.f90
include/: efp.h
interface/: efp.f90  readme.txt
libefp/libefp.xcodeproj/: project.pbxproj
share/libefp/fraglib/databases/: README.md  acetamide-gp.efp  aceticacid-hb.efp  adenine-stack.efp  benzene.efp  cyclopentane.efp  formamide.efp  hydrogencyanide.efp  indole.efp  methanol.efp  methylamine.efp  neopentane.efp  nmethylacetamide.efp  pentane.efp  thymine-stack.efp  thymine-wc.efp  uracil-gp.efp
src/: .gitignore  BSDmakefile  Makefile  ai_disp.c  ai_elec.c  ai_xr.c  aidisp.c  balance.c  balance.h  bvec.c  bvec.h  chtr.c  clapack.c  clapack.h  disp.c  disp.h  efp.c  efp.h  efp_private.h  efp_util.c  elec.c  elec.h  elec_grad.c  elec_terms.c  electerms.c  ff.c  ff.h  int.c  int.h  int_shift.h  intshift.h  libefp.pc.in  libefp.sym  log.c  log.h  math_util.h  mathutil.h  parse.c  parse.h  phys_const.h  (+12 more)
tests/: .gitignore  BSDmakefile  Makefile  atom_coord.in  benzene_methane.inp  bvec_test.c  constraint_1.in  constraint_2.in  constraint_3.in  difa  disp_1.c  disp_1a.c  disp_1a.in  disp_1a_mc.in  disp_1a_md.in  disp_1b.c  disp_1b.in  disp_1c.c  disp_1c.in  disp_1d.c  disp_2.c  disp_2a.c  disp_2a.in  disp_2b.c  disp_2b.in  disp_3a.c  disp_3a.in  disp_3b.c  disp_3b.in  efield.in  elec_1.c  elec_1a.c  elec_1a.in  elec_1a_mc.in  elec_1b.c  elec_1b.in  elec_1c.c  elec_1c.in  elec_2.c  elec_2a.c  (+131 more)
tests/data/: sint_1  sint_2  tint_1  tint_2
tests/rand_init_energy_mc/: mc_1.energy  mc_10.energy  mc_11.energy  mc_2.energy  mc_3.energy  mc_4.energy  mc_5.energy  mc_6.energy  mc_7.energy  mc_8.energy  mc_9.energy
tests/s22_mc_test/: 2_pyridoxine_2_aminopyridine.inp  2_pyridoxine_2_aminopyridine.inp.out.energy  2_pyridoxine_2_aminopyridine_energy.txt  adenine_thymine_wc.inp  adenine_thymine_wc.inp.out.energy  adenine_thymine_wc_energy.txt  ammonia_dimer.inp  ammonia_dimer.inp.out.energy  benzene_ammonia.inp  benzene_ammonia.inp.out.energy  benzene_dimer_parallel_displaced.inp  benzene_dimer_parallel_displaced.inp.out.energy  benzene_dimer_t_shaped.inp  benzene_dimer_t_shaped.inp.out.energy  benzene_hcn.inp  benzene_hcn.inp.out.energy  benzene_methane.inp  benzene_methane.inp.out.energy  benzene_methane_energy.txt  benzene_water.inp  benzene_water.inp.out.energy  ethene_dimer.inp  ethene_ethyne.inp  formamide_dimer.inp  formamide_dimer.inp.out.energy  formic_acid_dimer.inp  formic_acid_dimer.inp.out.energy  indole_benzene_stack.inp  indole_benzene_stack.inp.out.energy  myjob  s22_test.e9841646  sp.inp  sp.inp.out.energy  water_dimer.inp  water_dimer.inp.out.energy  water_dimer_energy.txt  water_dimer_random_no.txt
tests/s22_mc_test/opt/: 2_pyridoxine_2_aminopyridine.inp  adenine_thymine_wc.inp  ammonia_dimer.inp  benzene_ammonia.inp  benzene_dimer_parallel_displaced.inp  benzene_dimer_t_shaped.inp  benzene_hcn.inp  benzene_methane.inp  benzene_water.inp  ethene_dimer.inp  ethene_ethyne.inp  formamide_dimer.inp  formic_acid_dimer.inp  indole_benzene_stack.inp  myjob  sp.inp  water_dimer.inp
tools/: Flexible_V5.py  README.md  create_hybrid_basis.py
web/: CNAME  header.html  index.txt  mainpage.h
